# csci270-flake-template

./: README.md  flake.nix  main.py  pyproject.toml
sample_package/: __main__.py
