[tool.poetry]
name = "sample-project"
version = "0.1.0"
description = ""
authors = ["Alyaman Massarani <massaraniah@g.cofc.edu>"]
# readme = "README.md"
# license = "BSD"
packages = [
  { include = "sample_package" }
]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.2"
numpy = "^2.1.0"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
scipy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
